--- a/manchesterio/manchesterio/templates/service.html
+++ b/manchesterio/manchesterio/templates/service.html
@@ -50,11 +50,8 @@
                         {% else %}
                             {% if calling_point.state == 'en-route' %}
                                 Arrival expected {% if calling_point.predicted_arrival == calling_point.public_arrival %}on time{% else %}{{ calling_point.predicted_arrival.strftime('%H:%M')}}{% endif %}<br>
-                            {% elif calling_point.state == 'arrival' or calling_point.state == 'departure' %}
+                            {% elif calling_point.state == 'arrival' %}
                                 Arrived {% if calling_point.actual_arrival == calling_point.public_arrival %}on time{% else %}{{ calling_point.actual_arrival.strftime('%H:%M')}}{% endif %}<br>
-                            {% endif %}
-                            {% if calling_point.state == 'en-route' or calling_point.state == 'arrival' %}
-                                Departure expected {% if calling_point.predicted_departure == calling_point.public_departure %}on time{% else %}{{ calling_point.predicted_departure.strftime('%H:%M')}}{% endif %}
                             {% else %}
                                 Departed {% if calling_point.actual_departure == calling_point.public_departure %}on time{% else %}{{ calling_point.actual_departure.strftime('%H:%M')}}{% endif %}
                             {% endif %}
