--- a/manchesterio/manchesterio/templates/station.html
+++ b/manchesterio/manchesterio/templates/station.html
@@ -60,6 +60,8 @@
                         </tbody>
                     </table>
                 </li>
+            {% else %}
+                <li class="departure--none">There are currently no departures scheduled from this station</li>
             {% endfor %}
         </ul>
 
