--- a/deploy/site-cookbooks/manchesterio/templates/default/medlock.cfg.erb
+++ b/deploy/site-cookbooks/manchesterio/templates/default/medlock.cfg.erb
@@ -1,5 +1,5 @@
 DEBUG = <%= node.manchesterio.debug.to_s.capitalize %>
 SENTRY_DSN = "<%= @sentry_dsn %>"
-NETWORK_RAIL_AUTH = ("<%= @network_rail['user'] %>", "<%= @network_rail['pass'] %>")
-NETWORK_RAIL_CONSUMER_ID = "<%= node.manchesterio.network_rail_consumer_id %>"
+NATIONAL_RAIL_QUEUE_NAME = "<%= @national_rail_queue_name %>"
+NATIONAL_RAIL_CONSUMER_ID = "<%= node.manchesterio.national_rail_consumer_id %>"
 CELERYBEAT_SCHEDULE_FILENAME = "<%= node.manchesterio.root %>/data/celerybeat"
