Add NRE attribution

--- a/assets/scss/pages/_station.scss
+++ b/assets/scss/pages/_station.scss
@@ -8,6 +8,7 @@ $departures-foreground: #ffbf00;
   border: 2px solid $departures-foreground;
   border-radius: 0.5em;
   color: $departures-foreground;
+  margin-top: 1em;
 
   a {
     color: $departures-foreground;
