--- a/manchesterio/manchesterio/templates/about.html
+++ b/manchesterio/manchesterio/templates/about.html
@@ -23,5 +23,8 @@
             database. Contains public sector information licensed under the
             <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.</p>
 
+        <p>Metrolink and bus timetables are provided by TfGM. Contains public sector information licensed under the
+            <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a>.</p>
+
     </article>
 {% endblock %}
