--- a/assets/scss/manchesterio.scss
+++ b/assets/scss/manchesterio.scss
@@ -13,3 +13,12 @@
 @import 'pages/homepage';
 @import 'pages/search-results';
 @import 'pages/station';
+
+.sr-only {
+  height: 1px;
+  left: -10000px;
+  overflow: hidden;
+  position: absolute;
+  top: auto;
+  width: 1px;
+}
