--- a/manchesterio/manchesterio/templates/service.html
+++ b/manchesterio/manchesterio/templates/service.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% macro timestamp(time) %}
+    <time datetime="{{ time.isoformat() }}">{{ time.time().strftime('%H:%M') }}</time>
+{% endmacro %}
+
 {% block page_title %}{{ service.name}}{% endblock %}
 
 {% block page_header %}{{ service.name }}{% endblock %}
@@ -13,7 +17,6 @@
             {% if has_platform_information %}<th scope="col">Plat.</th>{% endif %}
             <th scope="col">Arrival</th>
             <th scope="col">Departure</th>
-            <th scope="col">State</th>
         </tr>
         </thead>
         <tbody>
@@ -32,33 +35,68 @@
                             {% if calling_point.platform %}{{ calling_point.platform }}{% else %}&mdash;{% endif %}
                         </td>
                     {% endif %}
-                    <td>
+                    <td class="calling-point__arrival-status--{{ calling_point.state }}">
                         {% if calling_point.public_arrival %}
-                            {{ calling_point.public_arrival.time().strftime('%H:%M') }}
-                        {% else %}
-                            &mdash;
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if calling_point.public_departure %}
-                            {{ calling_point.public_departure.time().strftime('%H:%M') }}
-                        {% else %}
-                            &mdash;
-                        {% endif %}
-                    </td>
-                    <td>
-                        {% if calling_point.state == 'cancelled' %}
-                            Cancelled
-                        {% elif calling_point.state == 'en-route' %}
-                            {% if calling_point.public_arrival %}
-                                Expected {% if calling_point.predicted_arrival == calling_point.public_arrival %}on time{% else %}{{ calling_point.predicted_arrival.strftime('%H:%M')}}{% endif %}
-                            {% else %}
-                                Expected {% if calling_point.predicted_departure == calling_point.public_departure %}on time{% else %}{{ calling_point.predicted_departure.strftime('%H:%M')}}{% endif %}
+                            {% if calling_point.state == 'cancelled' %}
+                                <span class="sr-only">Expected</span>
+                                <del>{{ timestamp(calling_point.public_arrival) }}</del>
+                                <ins>Cancelled</ins>
+                            {% elif calling_point.state == 'en-route' %}
+                                {% if calling_point.predicted_arrival == calling_point.public_arrival %}
+                                    <span class="sr-only">Expected</span>
+                                    {{ timestamp(calling_point.public_arrival) }}
+                                    <span class="sr-only">running on-time</span>
+                                {% else %}
+                                    <span class="sr-only">Expected</span>
+                                    <del>{{ timestamp(calling_point.public_arrival) }}</del>
+                                    <span class="sr-only">delayed until</span>
+                                    <ins>{{ timestamp(calling_point.predicted_arrival) }}</ins>
+                                {% endif %}
+                            {% elif calling_point.state == 'arrival' or calling_point.state == 'departure' %}
+                                <span class="sr-only">Expected</span>
+                                {% if calling_point.predicted_arrival == calling_point.public_arrival %}
+                                    {{ timestamp(calling_point.public_arrival) }}
+                                    <span class="sr-only">arrived on-time</span>
+                                {% else %}
+                                    <del>{{ timestamp(calling_point.public_arrival) }}</del>
+                                    <span class="sr-only">arrived late</span>
+                                    <ins>{{ timestamp(calling_point.predicted_arrival) }}</ins>
+                                {% endif %}
                             {% endif %}
-                        {% elif calling_point.state == 'arrival' %}
-                            Arrived {% if calling_point.actual_arrival %}{% if calling_point.actual_arrival == calling_point.public_arrival %}on time{% else %}{{ calling_point.actual_arrival.strftime('%H:%M')}}{% endif %}{% endif %}
                         {% else %}
-                            Departed {% if calling_point.actual_departure %}{% if calling_point.actual_departure == calling_point.public_departure %}on time{% else %}{{ calling_point.actual_departure.strftime('%H:%M')}}{% endif %}{% endif %}
+                            &mdash;
+                        {% endif %}
+                    </td>
+                    <td class="calling-point__departure-status--{{ calling_point.state }}">
+                        {% if calling_point.public_departure %}
+                            {% if calling_point.state == 'cancelled' %}
+                                <span class="sr-only">Expected</span>
+                                <del>{{ timestamp(calling_point.public_departure) }}</del>
+                                <ins>Cancelled</ins>
+                            {% elif calling_point.state == 'en-route' or calling_point.state == 'arrival' %}
+                                {% if calling_point.predicted_departure == calling_point.public_departure %}
+                                    <span class="sr-only">Expected</span>
+                                    {{ timestamp(calling_point.predicted_departure) }}
+                                    <span class="sr-only">running on-time</span>
+                                {% else %}
+                                    <span class="sr-only">Expected</span>
+                                    <del>{{ timestamp(calling_point.public_departure) }}</del>
+                                    <span class="sr-only">delayed until</span>
+                                    <ins>{{ timestamp(calling_point.predicted_departure) }}</ins>
+                                {% endif %}
+                            {% elif calling_point.state == 'departure' %}
+                                <span class="sr-only">Expected</span>
+                                {% if calling_point.predicted_departure == calling_point.public_departure %}
+                                    {{ timestamp(calling_point.public_departure) }}
+                                    <span class="sr-only">departed on-time</span>
+                                {% else %}
+                                    <del>{{ timestamp(calling_point.public_departure) }}</del>
+                                    <span class="sr-only">departed late</span>
+                                    <ins>{{ timestamp(calling_point.predicted_departure) }}</ins>
+                                {% endif %}
+                            {% endif %}
+                        {% else %}
+                            &mdash;
                         {% endif %}
                     </td>
                 </tr>
