Early draft at adding bus stop support

--- a/manchesterio/manchesterio/templates/homepage.html
+++ b/manchesterio/manchesterio/templates/homepage.html
@@ -13,6 +13,10 @@
                 <h2 class="action__title nearby-station-search__status" aria-role="status" aria-live="polite">Find nearby Metrolink stops</h2>
                 <p class="no-js-warning"><em>Sorry, you need a modern browser with JavaScript to use this feature.</em></p>
             </button>
+            <button class="action-grid__action nearby-station-search nearby-station-search--bus" disabled="true" data-href="/search/bus-stops/near/{lat},{lon}">
+                <h2 class="action__title nearby-station-search__status" aria-role="status" aria-live="polite">Find nearby bus stops</h2>
+                <p class="no-js-warning"><em>Sorry, you need a modern browser with JavaScript to use this feature.</em></p>
+            </button>
         </div>
 
         <div class="explainer">
